--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div id="head-container"></div>
-    <script src="js/component-loader.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zhu Yuechen Portfolio</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="component-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js"></script>
+    <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -23,12 +31,10 @@
     <!-- Projects Section -->
     <div id="projects-container"></div>
 
-    <!-- Contact Section Removed -->
-
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <!-- Contact Modal and Scripts -->
+    <!-- Contact Modal -->
     <div id="contact-modal-container"></div>
     <div id="scripts-container"></div>
 </body>
